# Rust_projects

./: README.md
.github/workflows/: main.yml
algorithms/src/: sorting.rs
algorithms/test/: sorting_tests.rs
calculator/: main
calculator/src/: main.rs
calculator/src/dep/: utilities.rs
calculator_cli/: Cargo.toml
calculator_cli/src/: main.rs
gitish/: Cargo.toml
gitish/src/: main.rs
gitish/src/dep/: mod.rs  versioning.rs
machine_learning/: Cargo.toml
machine_learning/.github/workflows/: rust-ci.yaml
machine_learning/src/: lib.rs  main.rs  rf.rs
machine_learning/src/algos/: array_ops.rs  ml.rs  mod.rs
machine_learning/tests/: basic_ops.rs
md_to_html/: Cargo.toml  md_to_html
md_to_html/html_output/: rust_md_concepts.html
md_to_html/md_inputs/: rust_md_concepts.md
md_to_html/src/: main.rs
n00b_pj/: Cargo.toml
n00b_pj/src/: main.rs
n00b_pj/src/add_ons/: characters.rs  gameplay.rs  gm_states.rs  mod.rs  utils.rs
n00b_pj/src/add_ons/data/story_data/: narration.json
physics/: Cargo.toml
physics/src/: main.rs
physics/src/dep/: functi.rs  mod.rs
physics/src/outputs/: output.csv
practice_rs/: Cargo.toml  test.txt
practice_rs/src/: main.rs
practice_rs/src/functions/: basics.rs  file_man.rs  mod.rs
